# BindingMetrics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  METRICS.md  README.md  environment.yml  environment_openfold3.yml  pyproject.toml
.github/workflows/: docker-publish.yml
benchmarks/: compare.py  manifest_example.json  run.py
docker/: entrypoint.sh
docs/: metrics.md  nonstandard.md  report_thresholds.md
scripts/: run_tests.py
src/binding_metrics/: __init__.py  utils.py
src/binding_metrics/cli/: __init__.py  batch.py  check_env.py  run.py
src/binding_metrics/core/: __init__.py  cyclic.py  forcefields.py  nonstandard.py  simulation.py  system.py
src/binding_metrics/io/: __init__.py  structures.py
src/binding_metrics/metrics/: __init__.py  comparison.py  contacts.py  electrostatics.py  energy.py  evobind.py  geometry.py  hbonds.py  interface.py  openfold.py  receptor_quality.py  registry.py  rmsd.py  sasa.py
src/binding_metrics/protocols/: __init__.py  base.py  peptide.py  plots.py  prep.py  relaxation.py  report.py  solvate.py
tests/: __init__.py  conftest.py  test_comparison.py  test_core.py  test_cyclic.py  test_electrostatics.py  test_energy_implicit.py  test_geometry.py  test_interface.py  test_io.py  test_metrics.py  test_nonstandard.py  test_openfold.py  test_package.py  test_protocols.py  test_receptor_drift.py  test_registry.py  test_relaxation.py
