[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binding-metrics"
version = "0.1.0"
description = "GPU-compatible Python package for evaluating biologics binding metrics through MD simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "BindingMetrics Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "openmm>=8.0",
    "numpy>=1.24",
    "mdtraj>=1.9",
]

[project.optional-dependencies]
full = ["pdbfixer>=1.9"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/binding-metrics/binding-metrics"
Repository = "https://github.com/binding-metrics/binding-metrics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
