[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binding-metrics"
version = "0.1.0"
description = "GPU-compatible Python package for evaluating biologics binding metrics through MD simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "BindingMetrics Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
simulation = ["openmm>=8.0"]  # plain CPU build; for GPU use environment.yml
analysis   = ["mdtraj>=1.9"]
structure  = ["pdbfixer>=1.9", "gemmi>=0.6"]
biotite    = ["biotite>=0.41", "hydride", "scipy>=1.10"]
openfold   = ["openfold"]
gaff       = []  # openmmforcefields + openff-toolkit are conda-forge only
all = [
    "openmm>=8.0",
    "mdtraj>=1.9",
    "pdbfixer>=1.9",
    "gemmi>=0.6",
    "biotite>=0.41",
    "hydride",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "markdown>=3.4",
    # openmmforcefields + openff-toolkit are conda-forge only; install via environment.yml
]
report = ["pandas>=1.5", "matplotlib>=3.6", "markdown>=3.4"]
dev    = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
binding-metrics-check-env = "binding_metrics.cli.check_env:main"
binding-metrics-run      = "binding_metrics.cli.run:main"
binding-metrics-batch    = "binding_metrics.cli.batch:main"
binding-metrics-relax = "binding_metrics.protocols.relaxation:main"
binding-metrics-energy = "binding_metrics.metrics.energy:main"
binding-metrics-interface = "binding_metrics.metrics.interface:main"
binding-metrics-compare = "binding_metrics.metrics.comparison:main"
binding-metrics-openfold = "binding_metrics.metrics.openfold:main"
binding-metrics-electrostatics = "binding_metrics.metrics.electrostatics:main"
binding-metrics-geometry  = "binding_metrics.metrics.geometry:main"
binding-metrics-receptor-quality = "binding_metrics.metrics.receptor_quality:main"
binding-metrics-prep      = "binding_metrics.protocols.prep:main"
binding-metrics-solvate   = "binding_metrics.protocols.solvate:main"
binding-metrics-report    = "binding_metrics.protocols.report:main"

[project.urls]
Homepage = "https://github.com/SimonCrouzet/BindingMetrics"
Repository = "https://github.com/SimonCrouzet/BindingMetrics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
